shalinee | correct datepicker alignment and adjust payment modal design

--- a/apps/web-giddh/src/assets/css/ngx-bs-datepicker.scss
+++ b/apps/web-giddh/src/assets/css/ngx-bs-datepicker.scss
@@ -89,9 +89,6 @@ th.next.available span {
     width: auto !important;
     max-width: 100%;
 }
-.bs-datepicker{
-    transform: translate(30%);
-}
 @media(max-width:991px){
        .drp-calendar.left{
         clear: left;
